--- a/WeddingApp/WeddingApp/Views/AddDishWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/AddDishWindow.xaml
@@ -6,6 +6,8 @@
         xmlns:local="clr-namespace:WeddingApp.Views"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
         mc:Ignorable="d"
+        x:Name="addDishWindow"
+        DataContext="{StaticResource dishListVM}"
         Title="AddDishWindow" Height="600" Width="800"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -177,8 +179,8 @@
                 Foreground="White"
                 VerticalAlignment="Center"
                 Margin="10 0"
-                        Command="{Binding AddButtonCommand}"
-                        CommandParameter="{Binding ElementName=AddProductWD}"></Button>
+                        Command="{Binding AddProductCommand}"
+                        CommandParameter="{Binding ElementName=addDishWindow}"></Button>
                     <Button
                 Style="{StaticResource GrayBtn}"
                 Content="Huỷ"
