--- a/WeddingApp/WeddingApp/Views/AddDishWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/AddDishWindow.xaml
@@ -16,7 +16,6 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{x:Null}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Foreground="{x:Null}"
         AllowsTransparency="True"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen">
@@ -43,11 +42,20 @@
                            Foreground="{StaticResource Orange1}"
                            Grid.Column="0"
                        Grid.ColumnSpan="2"></TextBlock>
-                <!--tên, giá, khuyến mãi-->
-                <StackPanel Orientation="Vertical" Grid.Row="1" Margin="40 30 0 0"
+                <!--tên, giá, loại-->
+                <StackPanel Orientation="Vertical" Grid.Row="1" Margin="40 20 0 0"
                             VerticalAlignment="Center">
+                    <ComboBox
+                        x:Name="OutlinedComboBox"
+                        Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        IsEnabled="{Binding Path=IsChecked, ElementName=OutlinedComboBoxEnabledCheckBox}"
+                        materialDesign:HintAssist.Hint="Loại của món ăn"
+                        Width="256">
+                        <ComboBoxItem>Món chính</ComboBoxItem>
+                        <ComboBoxItem>Tráng miệng</ComboBoxItem>
+                    </ComboBox>
                     <!--tên món ăn-->
-                    <StackPanel Orientation="Horizontal" Margin="0 20">
+                    <StackPanel Orientation="Horizontal" Margin="0 10">
                         <materialDesign:PackIcon
                                     Kind="Food"
                                     Width="30"
