--- a/WeddingApp/WeddingApp/Views/EditDishWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/EditDishWindow.xaml
@@ -44,12 +44,21 @@
                            Foreground="{StaticResource Orange1}"
                            Grid.Column="0"
                        Grid.ColumnSpan="2"></TextBlock>
-                <!--tên, giá, khuyến mãi-->
+                <!--tên, giá, loại món-->
                 <StackPanel Orientation="Vertical" Grid.Row="1"
-                            Margin="40 30 0 0"
+                            Margin="40 20 0 0"
                             VerticalAlignment="Center">
+                    <ComboBox
+                        x:Name="OutlinedComboBox"
+                        Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        IsEnabled="{Binding Path=IsChecked, ElementName=OutlinedComboBoxEnabledCheckBox}"
+                        materialDesign:HintAssist.Hint="Loại của món ăn"
+                        Width="256">
+                        <ComboBoxItem>Món chính</ComboBoxItem>
+                        <ComboBoxItem>Tráng miệng</ComboBoxItem>
+                    </ComboBox>
                     <!--tên món ăn-->
-                    <StackPanel Orientation="Horizontal" Margin="0 20">
+                    <StackPanel Orientation="Horizontal" Margin="0 10">
                         <materialDesign:PackIcon
                                     Kind="Food"
                                     Width="30"
