--- a/WeddingApp/WeddingApp/Views/UserControls/SetWeddingInfomationUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/SetWeddingInfomationUC.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WeddingApp.Views.UserControls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             DataContext="{StaticResource setWeddingInfoVM}"
              d:DesignHeight="710" d:DesignWidth="1120">
     <Grid>
         <Grid>
@@ -243,7 +244,7 @@
                         materialDesign:ButtonAssist.CornerRadius="5"
                         Margin="0 10 30 30"
                         Height="35"
-                        Width="100"
+                        Width="80"
                         FontSize="40">
                         <Button.Content>
                             <materialDesign:PackIcon Kind="ArrowRightThick" Width="30" Height="30"/>
