--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -4,7 +4,7 @@
     <viewmodels:ControlBarVM x:Key="controlBarVM"></viewmodels:ControlBarVM>
     <viewmodels:DashBoardVM x:Key="dashBoardVM"></viewmodels:DashBoardVM>
     <viewmodels:LoginVM x:Key="loginVM"></viewmodels:LoginVM>
-    <viewmodels:MainViewModel x:Key="mainVM"></viewmodels:MainViewModel>
+    <viewmodels:MainVM x:Key="mainVM"></viewmodels:MainVM>
     <viewmodels:InvoiceListVM x:Key="invoiceListVM"></viewmodels:InvoiceListVM>
     <viewmodels:WeddingHallVM x:Key="weddingHallVM"></viewmodels:WeddingHallVM>
     <viewmodels:WeddingListVM x:Key="weddingListVM"></viewmodels:WeddingListVM>
