--- a/WeddingApp/WeddingApp/Views/MainWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/MainWindow.xaml
@@ -56,7 +56,7 @@
                             Margin="20 20 20 10"
                             FontSize="15" FontWeight="Bold"
                             Visibility="Collapsed"
-                                x:Name="BookingUC">
+                                x:Name="SetWeddingInformationUC">
                                 <ListViewItem.Template>
                                     <ControlTemplate TargetType="{x:Type ListViewItem}">
                                         <Border Height="50" x:Name="border" CornerRadius="10" BorderBrush="Transparent" BorderThickness="1">
@@ -313,17 +313,17 @@
                                     </ControlTemplate>
                                 </ListViewItem.Template>
                             </ListViewItem>
-                            <!--<ListViewItem
+                            <ListViewItem
                                 Margin="20 10"
                                 FontSize="15" FontWeight="Bold"
                             Visibility="Visible"
-                                x:Name="EditDishUC">
+                                x:Name="CompletedInvoiceListUC">
                                 <ListViewItem.Template>
                                     <ControlTemplate TargetType="{x:Type ListViewItem}">
                                         <Border Height="50" x:Name="border" CornerRadius="10" BorderBrush="Transparent" BorderThickness="1">
                                             <StackPanel Orientation="Horizontal">
-                                                <materialDesign:PackIcon Name="icon" Margin="30 0 0 0" Height="30" Width="30" Kind="StoreSettings" VerticalAlignment="Center" ></materialDesign:PackIcon>
-                                                <TextBlock x:Name="text" Text="Sửa món ăn" Margin="20 16 0 0" ></TextBlock>
+                                                <materialDesign:PackIcon Name="icon" Margin="30 0 0 0" Height="30" Width="30" Kind="Invoice" VerticalAlignment="Center" ></materialDesign:PackIcon>
+                                                <TextBlock x:Name="text" Text="Hóa đơn đã thanh toán" Margin="20 16 0 0" ></TextBlock>
                                             </StackPanel>
                                         </Border>
                                         <ControlTemplate.Triggers>
@@ -341,7 +341,7 @@
                                         </ControlTemplate.Triggers>
                                     </ControlTemplate>
                                 </ListViewItem.Template>
-                            </ListViewItem>-->
+                            </ListViewItem>
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="SelectionChanged">
                                     <i:InvokeCommandAction Command="{Binding SwitchTabCommand}"
