--- a/WeddingApp/WeddingApp/Views/UserControls/SetWeddingInformationUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/SetWeddingInformationUC.xaml
@@ -2,12 +2,20 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WeddingApp.Views.UserControls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
+             x:Name="setInfoUC"
              DataContext="{StaticResource setWeddingInfoVM}"
              d:DesignHeight="710" d:DesignWidth="1120">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}"
+                                   CommandParameter="{Binding ElementName=setInfoUC}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
         <Grid>
             <Grid>
@@ -157,7 +165,7 @@
                         VerticalAlignment="Center"
                         Margin="10 20 20 0" />
                     <ComboBox
-                        x:Name="hall"
+                        x:Name="hallComboBox"
                         materialDesign:HintAssist.Hint="Chọn sảnh"
                         Foreground="Black"
                         FontSize="20"
@@ -168,11 +176,6 @@
                         VerticalContentAlignment="Center"
                         Height="50"
                         Padding="2,0,0,0">
-                        <ComboBoxItem>Sảnh A</ComboBoxItem>
-                        <ComboBoxItem>Sảnh B</ComboBoxItem>
-                        <ComboBoxItem>Sảnh C</ComboBoxItem>
-                        <ComboBoxItem>Sảnh D</ComboBoxItem>
-                        <ComboBoxItem>Sảnh E</ComboBoxItem>
                     </ComboBox>
                 </StackPanel>
 
@@ -194,7 +197,7 @@
                             VerticalAlignment="Center"
                             Margin="10 20 20 0" />
                         <ComboBox
-                            x:Name="banquetTableAmount"
+                            x:Name="comboBoxTableAmount"
                             materialDesign:HintAssist.Hint="Số bàn"
                             Foreground="Black"
                             FontSize="20"
@@ -203,6 +206,7 @@
                             materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
                             Width="100"
                             VerticalContentAlignment="Center"
+                            IsEnabled="False"
                             Height="50"
                             Padding="2,0,0,0">
                         </ComboBox>
@@ -220,7 +224,7 @@
                             VerticalAlignment="Center"
                             Margin="10 20 20 0" />
                         <ComboBox
-                            x:Name="reversedBanquetTableAmount"
+                            x:Name="comboBoxreversedTableAmount"
                             materialDesign:HintAssist.Hint="Số bàn dự trữ"
                             Foreground="Black"
                             FontSize="20"
@@ -230,6 +234,7 @@
                             Width="150"
                             VerticalContentAlignment="Center"
                             Height="50"
+                            IsEnabled="False"
                             Padding="2,0,0,0">
                         </ComboBox>
                     </StackPanel>
@@ -238,14 +243,15 @@
                 <Grid Grid.Row="6">
                     <Button
                         Style="{StaticResource SearchBtn}"
-                        CommandParameter="{Binding ElementName=CreateOrderWD}"
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Right"
                         materialDesign:ButtonAssist.CornerRadius="5"
                         Margin="0 10 30 30"
                         Height="35"
                         Width="80"
-                        FontSize="40">
+                        FontSize="40" 
+                        Command="{Binding NextStepCommand}"
+                        CommandParameter="{Binding ElementName=setInfoUC}">
                         <Button.Content>
                             <materialDesign:PackIcon Kind="ArrowRightThick" Width="30" Height="30"/>
                         </Button.Content>
