--- a/WeddingApp/WeddingApp/Views/EditDishWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/EditDishWindow.xaml
@@ -4,7 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeddingApp.Views"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
+        x:Name="EditDishWindowUC"
         Title="EditDishWindow"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
@@ -15,12 +17,18 @@
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
         Background="{x:Null}"
-        DataContext="{StaticResource dishListVM}"
+        DataContext="{StaticResource editDishListVM}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         Foreground="{x:Null}"
         AllowsTransparency="True"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}"
+                                   CommandParameter="{Binding ElementName=EditDishWindowUC}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
         <Grid>
             <Grid Margin="10">
@@ -190,8 +198,8 @@
                 Foreground="White"
                 VerticalAlignment="Center"
                 Margin="10 0"
-                        Command="{Binding UpdateCommand}"
-                        CommandParameter="{Binding ElementName=dishListVM}"></Button>
+                        Command="{Binding EditDishCommand}"
+                        CommandParameter="{Binding ElementName=EditDishWindowUC}"></Button>
                     <Button
                 Style="{StaticResource GrayBtn}"
                 Content="Huỷ"
