--- a/WeddingApp/WeddingApp/Views/ChangeEmployeeInformationWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/ChangeEmployeeInformationWindow.xaml
@@ -1,4 +1,6 @@
 ﻿<Window x:Class="WeddingApp.Views.ChangeEmployeeInformationWindow"
+        x:Name="ChaneEmployeeInformationWD"
+        DataContext="{StaticResource employeeListVM}"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -24,9 +26,9 @@
         ResizeMode="CanMinimize"
         SizeToContent="Height">
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
-        <Grid>
+        <Grid Margin="0,0,-55,-229">
             <Grid Margin="10">
-                <uc:ControlBarUC></uc:ControlBarUC>
+                <uc:ControlBarUC Margin="0,0,10,-84"></uc:ControlBarUC>
                 <StackPanel>
                     <Label
                 x:Name="lblChangeinfo"
@@ -43,13 +45,17 @@
                     <!--nhập thông tin đăng ký-->
                     <Grid
                         x:Name="grdInformation"
-                        Margin="10 50"
+                        Margin="5 50"
                         VerticalAlignment="Stretch"
                         HorizontalAlignment="Center"
                         Visibility="Visible">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="171*"/>
+                            <ColumnDefinition Width="149*"/>
+                        </Grid.ColumnDefinitions>
 
                         <StackPanel Orientation="Vertical"
-                                    VerticalAlignment="Stretch">
+                                    VerticalAlignment="Stretch" Margin="0,0,10,50.8" Grid.ColumnSpan="2">
                             <!--họ tên-->
                             <StackPanel x:Name="nameStack"
                                 Orientation="Horizontal" Margin="0 20">
@@ -61,8 +67,9 @@
                                     VerticalAlignment="Center"
                                     Margin="10,10,20,-18" />
                                 <TextBox
-                                    x:Name="txtFullname"
-                                    TabIndex="2"
+                                    x:Name="txtEmployeeName"
+                                    Text="{Binding EmployeeName}"
+                                    TabIndex="0"
                                 materialDesign:HintAssist.Hint="Họ và tên"
                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                                 Foreground="Black"
@@ -87,8 +94,9 @@
                                         VerticalAlignment="Top"
                                         Margin="10,10,20,-18" />
                                 <TextBox
-                                        x:Name="txtMail"
-                                        TabIndex="0"
+                                        x:Name="txtUsername"
+                                        Text="{Binding UserName}"
+                                        TabIndex="1"
                                     materialDesign:HintAssist.Hint="Tên đăng nhập"
                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                                     Foreground="Black"
@@ -102,31 +110,67 @@
                                     Padding="2,0,0,0">
                                 </TextBox>
                             </StackPanel>
-                            <!--Mật khẩu-->
-                            <StackPanel x:Name="phoneStack"
-                                Orientation="Horizontal" Margin="0 20">
+                            <!--password-->
+                            <StackPanel Orientation="Horizontal" Margin="0 20">
                                 <materialDesign:PackIcon
                                     Kind="Password"
                                     Width="30"
                                     Height="30"
                                     Foreground="{StaticResource Gray}"
                                     VerticalAlignment="Center"
-                                    Margin="10,10,20,-18" />
-                                <TextBox
-                                    x:Name="txtPhone"
-                                    TabIndex="1"
-                                materialDesign:HintAssist.Hint="Mật khẩu"
-                                Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                Foreground="Black"
-                                FontSize="16"
-                                FontWeight="Medium"
-                                materialDesign:HintAssist.Foreground="{StaticResource Gray}"
-                                materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
-                                Width="250"
-                                VerticalContentAlignment="Center"
-                                Height="50"
-                                Padding="2,0,0,0">
-                                </TextBox>
+                                    Margin="10,10,20,-14" />
+                                <PasswordBox
+                                  x:Name="PasswordBox"
+                                    TabIndex="2"
+                                  materialDesign:HintAssist.Hint="Mật khẩu"
+                                  materialDesign:HintAssist.Foreground="{StaticResource Gray}"
+                                  materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
+                                  Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"
+                                   VerticalContentAlignment="Center"
+                                    Foreground="Black"
+                                    Width="250"
+                                    Height="50"
+                                    FontSize="16"
+                                    FontWeight="Medium"
+                                    Padding="2,0,0,0" >
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="PasswordChanged">
+                                            <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" 
+                                                   CommandParameter="{Binding ElementName=PasswordBox}"/>
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                </PasswordBox>
+                            </StackPanel>
+                            <!--repassword-->
+                            <StackPanel Orientation="Horizontal" Margin="0 20">
+                                <materialDesign:PackIcon
+                                    Kind="Password"
+                                    Width="30"
+                                    Height="30"
+                                    Foreground="{StaticResource Gray}"
+                                    VerticalAlignment="Center"
+                                    Margin="10,10,20,-14" />
+                                <PasswordBox
+                                  x:Name="RePasswordBox"
+                                    TabIndex="3"
+                                  materialDesign:HintAssist.Hint="Nhập lại mật khẩu"
+                                  materialDesign:HintAssist.Foreground="{StaticResource Gray}"
+                                  materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource Gray}"
+                                  Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"
+                                  VerticalContentAlignment="Center"
+                                    Foreground="Black"
+                                    Width="250"
+                                    Height="50"
+                                    FontSize="16"
+                                    FontWeight="Medium"
+                                    Padding="2,0,0,0" >
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="PasswordChanged">
+                                            <i:InvokeCommandAction Command="{Binding RePasswordChangedCommand}" 
+                                                   CommandParameter="{Binding ElementName=RePasswordBox}"/>
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                </PasswordBox>
                             </StackPanel>
                             <!--địa chỉ-->
                             <StackPanel Orientation="Horizontal" Margin="0 20">
@@ -138,8 +182,9 @@
                                     VerticalAlignment="Center"
                                     Margin="10,10,20,-18" />
                                 <TextBox
-                                    x:Name="txtAddress"
-                                    TabIndex="2"
+                                    x:Name="txtSalary"
+                                    Text="{Binding Salary}"
+                                    TabIndex="4"
                                 materialDesign:HintAssist.Hint="Mức lương"
                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                                 Foreground="Black"
@@ -155,25 +200,25 @@
                             </StackPanel>
                             <!--ngày vào làm-->
                             <StackPanel Orientation="Horizontal" Margin="20 20">
-                                <DatePicker
+                                <DatePicker Foreground="Black"
+                                            x:Name="txtDate"
+                                  SelectedDate="{Binding Date, Mode=TwoWay}"
                                   Width="250"
                                   materialDesign:HintAssist.Hint="Chọn ngày vào làm"
                                   Style="{StaticResource MaterialDesignOutlinedDatePicker}" />
                             </StackPanel>
                             <Button
-                                x:Name="saveBtn"
+                                x:Name="btnSaveInfo"
                             TabIndex="5"
                             IsDefault="True"
                             Style="{StaticResource GreenBtn}"
                             Content="Lưu thay đổi"
-                            Width="270"
-                            Height="40"
-                            Margin="0 20 0 0"
+                            Height="52"
+                            Margin="20,100,10.4,0"
                             FontSize="20"
                             Foreground="White"
                             Command="{Binding SaveInfoCommand}"
-                            CommandParameter="{Binding ElementName=changeInfoWD}">
-                            </Button>
+                            CommandParameter="{Binding ElementName=changeInfoWD}"/>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
