--- a/WeddingApp/WeddingApp/Views/ChangeEmployeeInformationWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/ChangeEmployeeInformationWindow.xaml
@@ -1,6 +1,6 @@
 ﻿<Window x:Class="WeddingApp.Views.ChangeEmployeeInformationWindow"
-        x:Name="ChaneEmployeeInformationWD"
-        DataContext="{StaticResource employeeListVM}"
+        x:Name="ChangeEmployeeWD"
+        DataContext="{StaticResource changeEmployeeVM}"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -26,13 +26,20 @@
         ResizeMode="CanMinimize"
         SizeToContent="Height">
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
-        <Grid Margin="0,0,-55,-229">
+        <Grid>
             <Grid Margin="10">
-                <uc:ControlBarUC Margin="0,0,10,-84"></uc:ControlBarUC>
+                <uc:ControlBarUC Margin="0,-40,0,0"></uc:ControlBarUC>
                 <StackPanel>
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
+                    <!--nhập thông tin đăng ký-->
                     <Label
-                x:Name="lblChangeinfo"
-                Content="Thay đổi thông tin"
+                x:Name="lblAddEmployee"
+                Content="Thêm nhân viên"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
                 Foreground="{StaticResource Orange1}"
@@ -41,21 +48,17 @@
                 VerticalContentAlignment="Center"
                 FontSize="40"
                 FontWeight="Bold"
-                Margin="0,30,0,0" />
+                Margin="60,0,60,25" Height="46" />
                     <!--nhập thông tin đăng ký-->
                     <Grid
                         x:Name="grdInformation"
-                        Margin="5 50"
+                        Margin="10 50"
                         VerticalAlignment="Stretch"
                         HorizontalAlignment="Center"
                         Visibility="Visible">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="171*"/>
-                            <ColumnDefinition Width="149*"/>
-                        </Grid.ColumnDefinitions>
 
                         <StackPanel Orientation="Vertical"
-                                    VerticalAlignment="Stretch" Margin="0,0,10,50.8" Grid.ColumnSpan="2">
+                                    VerticalAlignment="Stretch" Margin="0,-87,0.4,86.8">
                             <!--họ tên-->
                             <StackPanel x:Name="nameStack"
                                 Orientation="Horizontal" Margin="0 20">
@@ -80,8 +83,7 @@
                                 Width="250"
                                 VerticalContentAlignment="Center"
                                 Height="50"
-                                Padding="2,0,0,0">
-                                </TextBox>
+                                Padding="2,0,0,0"/>
                             </StackPanel>
                             <!--Tên đăng nhập-->
                             <StackPanel x:Name="usernameStack"
@@ -107,8 +109,7 @@
                                     Width="250"
                                     VerticalContentAlignment="Center"
                                     Height="50"
-                                    Padding="2,0,0,0">
-                                </TextBox>
+                                    Padding="2,0,0,0"/>
                             </StackPanel>
                             <!--password-->
                             <StackPanel Orientation="Horizontal" Margin="0 20">
@@ -172,7 +173,7 @@
                                     </i:Interaction.Triggers>
                                 </PasswordBox>
                             </StackPanel>
-                            <!--địa chỉ-->
+                            <!--lương-->
                             <StackPanel Orientation="Horizontal" Margin="0 20">
                                 <materialDesign:PackIcon
                                     Kind="Money"
@@ -195,8 +196,7 @@
                                 Width="250"
                                 VerticalContentAlignment="Center"
                                 Height="50"
-                                Padding="2,0,0,0">
-                                </TextBox>
+                                Padding="2,0,0,0"/>
                             </StackPanel>
                             <!--ngày vào làm-->
                             <StackPanel Orientation="Horizontal" Margin="20 20">
@@ -208,17 +208,17 @@
                                   Style="{StaticResource MaterialDesignOutlinedDatePicker}" />
                             </StackPanel>
                             <Button
-                                x:Name="btnSaveInfo"
                             TabIndex="5"
                             IsDefault="True"
                             Style="{StaticResource GreenBtn}"
                             Content="Lưu thay đổi"
-                            Height="52"
-                            Margin="20,100,10.4,0"
+                            Width="270"
+                            Height="40"
+                            Margin="0 20 0 0"
                             FontSize="20"
                             Foreground="White"
-                            Command="{Binding SaveInfoCommand}"
-                            CommandParameter="{Binding ElementName=changeInfoWD}"/>
+                            Command="{Binding ChangeEmployeeCommand}"
+                            CommandParameter="{Binding ElementName=ChangeEmployeeWD]}"/>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
@@ -232,7 +232,7 @@
             RadiusX="10"
             Panel.ZIndex="-2"
             Effect="{StaticResource dropShadow}"
-            Margin="10">
+            Margin="10,-31,10,10">
             </Rectangle>
         </Grid>
     </materialDesign:TransitioningContent>
