--- a/weddingapp/WeddingApp/Views/UserControls/Admin/EmployeeListUC.xaml
+++ b/weddingapp/WeddingApp/Views/UserControls/Admin/EmployeeListUC.xaml
@@ -126,7 +126,9 @@
                                         Margin="20 0"
                                           Style="{StaticResource MaterialDesignIconForegroundButton}"
                                           ToolTip="Chỉnh sửa thông tin nhân viên"
-                                          IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
+                                          IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                                            Command="{Binding Source={StaticResource employeeListVM}, Path=OpenChangeEmployeeInformationWindowCommand}"
+                                            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}">
                                             <materialDesign:PackIcon Kind="Edit" Height="30" Width="30" />
                                         </Button>
                                         <Button
